test/core/errors/offsets_error/zs/parenthesis_error.zs
package parenthesis_error;

struct ParenthesisError
{
    uint32 offset;
(offset):
    string field;
};
